# OffWeather

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setting.toml
.zed/: settings.json
src/: api.py  cli.py  command.py  commands.py  errors.py  gui.py  information.py  main.py  models.py  ometeo.py  service.py  setting.py  static.py  utils.py  workflow.py
src/core/: api.py  commands.py  service.py
src/endpoins/: forecast.py  geo.py
src/open_meteo/: api.py  commands.py  forecast.py  geo.py  models.py
test/: information_test.py  utils_test.py
