[project]
name = "OffWeather"
version = "0.1.0"
description = "Open-Source Offline Weather App"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Volkan", email = "zerovolkan@proton.my" }]
dependencies = [
    "click>=8.2.1",
    "flet==0.28.3",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "ty>=0.0.1a21",
    "urllib3>=2.5.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "offweather"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.28.3"]

[tool.pyright]
ignore = ["src/gui.py"]

[tool.ty.src]
exclude = ["src/gui.py"]
